# archive-it

./: Cargo.toml  readme.md
src/: cli.rs  common.rs  forward.rs  large_state.rs  macros.rs  main.rs  maybe_async.rs  serve.rs  state.rs  utils.rs
src/command/: compress.rs  forward.rs  mod.rs  serve.rs
