[package]
name = "archive-it"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Wireless4024/archive-it"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7"
anyhow = "1.0"
axum = { version = "0.6", features = ["macros"] }
bstr = "1.3"
clap = { version = "4.1", features = ["derive"] }
futures-util = "0.3"
hyper = "1.0.0-rc.3"
mime_guess = "2.0"
pathdiff = "0.2"
percent-encoding = "2.2"
reqwest = { version = "0.11", features = ["tokio-rustls", "stream"] }
tokio = { version = "1.25", default-features = false, features = ["rt-multi-thread", "macros","fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"